updating views and finalizing mvp

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+@import "font-awesome";
 @import 'normalize';
 @import 'foundation';
 @import 'custom';
+@import 'layout';
+@import 'repair_orders';
