--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,3 @@
 <h2>Search Results</h2>
-<% @results. each do |r| %>
-  <%= r.inspect %><br />
-<% end %>
+<%= render 'shared/search_box' %>
+<%= render 'shared/repair_order_table' %>
