--- a/app/views/shared/_search_box.html.erb
+++ b/app/views/shared/_search_box.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-4 columns search-box large-offset-8">
-    <%= search_form_for @q, url: search_path do |f| %>
+    <%= search_form_for @q, url: keyword_search_path do |f| %>
       <%= f.search_field :recommendations_or_maintenance_or_items_cause_or_items_correction_cont %>
       <%= f.submit %>
     <% end %>
