--- a/app/views/repair_orders/_form.html.erb
+++ b/app/views/repair_orders/_form.html.erb
@@ -16,15 +16,15 @@
     <%= f.number_field :ro_number %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :year %>
+    <%= f.number_field :year %>
+  </div>
 
-
-
-
-
-
-
-
-
+  <div class="form-group">
+    <%= f.label :model %>
+    <%= f.text_field :model %>
+  </div>
 
 
   <div class="item-list">
