--- a/app/assets/stylesheets/repair_orders.scss
+++ b/app/assets/stylesheets/repair_orders.scss
@@ -17,6 +17,22 @@
   }
 }
 
+.item-uploads form{
+ display: none; 
+}
+
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+
+.item-uploads .fa-spinner {
+  animation-name: spin;
+  animation-duration: 2000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
 .item {
   border: 1px solid #444;
   background-color: rgba(40,40,40,.5);
@@ -42,6 +58,8 @@
     display: inline-block;
     font-size: 26px;
     padding-top: 5px;
+    width: 100%;
+    display: inline-block;
     
     i {
       margin-right: 10px;
@@ -60,9 +78,7 @@
   &-upload-field {
     display: inline-block;
     margin-top: 18px;
-    text-align: right;
     width: 100%;
-    height: 40px;
   }
   
   .delete-item {
