--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,15 @@
       </div>
     </div>
   </div>
+  
+  <div class="modal modal-hidden">
+    
+    <div class="modal-box">
+      <i class="fa fa-times modal-close"></i>
+      <div class="modal-box-content"></div>
+      
+    </div>
+  </div>
+  
 </body>
 </html>
