--- a/app/views/repair_orders/index.html.erb
+++ b/app/views/repair_orders/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="large-8 columns">
-    <%= link_to 'New Repair order', new_repair_order_path, class: "button" %>
+    <%= link_to 'New Repair order', new_repair_order_path %>
   </div>
   <%= render 'shared/search_box' %>
 </div>
