--- a/app/views/repair_orders/_form.html.erb
+++ b/app/views/repair_orders/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :ro_number %>
+    <%= f.label :ro_number, "RO Number" %>
     <%= f.number_field :ro_number %>
   </div>
 
