--- a/app/views/shared/_repair_order_table.html.erb
+++ b/app/views/shared/_repair_order_table.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Repair order</th>
+      <th>Repair Order</th>
       <th>Year</th>
       <th>Model</th>
       <th></th>
